--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,4 +1,9 @@
-<% @pokemons.each do |pokemon| %>
-  <%= pokemon.name %>
-  <%= cl_image_tag pokemon.photo.key %>
+<% if @pokemons.exists? %>
+  <div class="grid">
+  <% @pokemons.each do |pokemon| %>
+    <%= render pokemon %> 
+  <% end %>
+  </div>
+<% else %>
+  <p>There are no Pokemons in the Pokedex</p>
 <% end %>
