--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,10 @@
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
+$dark-blue: #051F49;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$white: #FFFFFF;
