--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -4,5 +4,13 @@
     <p>You hear a rustle ...</p>
     <%= render @pokemon %>
   </div>
-  <div>FORM</div>
+  <div>
+    <h2>Do you dare to catch this Pokemon?</h2>
+    <%= simple_form_for [@pokemon, @pokeball] do |f| %>
+      <%= f.association :trainer, label: "Who's trying their luck?" %>
+      <%= f.input :location, label: "Where are you?" %>
+      <%= f.input :caught_on, html5: true, label: "When?" %>
+      <%= f.submit "Catch!", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
