Too much stuff, should've made more commits

--- a/app/assets/stylesheets/components/_pokemon_card.scss
+++ b/app/assets/stylesheets/components/_pokemon_card.scss
@@ -10,6 +10,11 @@
   background: linear-gradient(45deg, #a4c8e2 0%, #6590b5 100%);
   background-size: 200% 200%;
 
+  &:hover {
+    transform: rotate3d(1,0.5,0.1,30deg);
+    background-position: 100% 50%;
+  }
+
   img {
     width: 100%;
   }
