--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -11,3 +11,5 @@
 <% else %>
   <p>There are no Trainers on the Pokedex</p>
 <% end %>
+
+<%= link_to "New Trainer", new_trainer_path, class: "btn btn-primary" %>
