--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -4,5 +4,20 @@
     <p><%= @trainer.name %> is going to catch 'em all!</p>
     <%= render @trainer %>
   </div>
-  <div>LIST OF POKEMONS</div>
+  <div>
+    <h3>Their Pokemon</h3>
+    <% if @trainer.pokeballs.exists? %>
+      <% @trainer.pokeballs.each do |pokeball| %>
+        <div class="pokemon-card">
+          <%= cl_image_tag pokeball.pokemon.photo.key %>
+          <h2><%= link_to pokeball.pokemon.name, pokemon_path(pokeball.pokemon) %></h2>
+          <span><%= pokeball.pokemon.element_type %></span>
+          <p>Caught on <%= pokeball.caught_on %> at <%= pokeball.location %></p>
+          <%= link_to "Relase", pokeball_path(pokeball), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-danger" %>
+        </div>
+      <% end %>
+    <% else %>
+      <p>This trainer has no Pokemon yet. They should get training!</p>
+    <% end %>
+  </div>
 </div>
